# juce-audio-plugin-cmake-template

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
shared/: StandaloneFilterApp.cpp  StandaloneFilterApp.h
